clase 8 de agosto

--- a/G01_HTML_ej01Teoria.html
+++ b/G01_HTML_ej01Teoria.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,23 @@
 </head>
 <body>
     <h1>Erica Fabbro</h1>
+
     <p>Buscadora de <strong>lugares</strong> fascinantes, <strong>historias</strong> memorables y 
         <strong>comidas</strong> sorprendentes para vivir y compartir.</p>
     <p>También en instagram: <a href="http://www.instagram.com/lescurioses">@lescurioses</a></p>
+
+    <h3>Aptitudes personales:</h3>
+        <ul>
+            <li>Trabajo en equipo</li>
+            <li>Escucha activa</li>
+            <li>Organización</li>
+        </ul>
+        
+    <h3>Tecnologías:</h3>
+        <ol type="1">
+            <li>Java</li>
+            <li>MySQL</li>
+            <li>HTML & CSS</li>
+        </ol>
 </body>
 </html>
